--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">N[AR]VA</string>
+    <string name="app_name">AR Narva</string>
     <string name="find_a_guide">Find a guide</string>
     <string name="discover">Discover</string>
     <string name="tours">Tours</string>
